# GeneratorOmegaPiPi

./: CMakeLists.txt  gen-omegapipi-setup.sh.in
include/: GeneratorOmegaPiPi.hpp
src/: GeneratorOmegaPiPi.cpp  main.cpp
